Change in the structure

--- a/rdf.html
+++ b/rdf.html
@@ -95,27 +95,39 @@
 						<p class="animate-box">We created URIs for 3 different entities and we described each of them in RDF/XML, one of the possibile serializations of RDF:
 							<div>
 								<p class="animate-box fadeIn animated">
-									PEOPLE - Napoleon: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</span></li>
-									</br>
+									<i class="fas fa-circle"></i>PEOPLE - Napoleon: 
+									<p class="animate-box fadeIn animated">
+									<span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</span></li>
+									</p>
+									<p>	
 									<img src="images/xmlnapoleon.jpg" alt="" class="animate-box img-responsive">
+									</p>
 								</p>
 								<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/napoleon.xml" target="_blank">RDF/XML</a> of this entity here.</span>
 								</p>
 
 
 								<p class="animate-box fadeIn animated">
-									PLACE - Rochefort: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</span></li>
-									</br>
+									<i class="fas fa-circle"></i>PLACE - Rochefort: 
+									<p class="animate-box fadeIn animated">
+									<span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</span></li>
+									</p>	
+									<p>
 									<img src="images/xmlplace.jpg" alt="" class="animate-box img-responsive">
+									</p>
 								</p>
 								<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/rochefort.xml" target="_blank">RDF/XML</a> of this entity here.</span>
 								</p>
 
 								<p class="animate-box fadeIn animated">
-									CONCEPT/SUBJECT: <span style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
-									</br>
+									<i class="fas fa-circle"></i>CONCEPT/SUBJECT: 
+									<p class="animate-box fadeIn animated">
+									<span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
+									</p>
+									<p>
 									<img src="images/xmlconcept.jpg" alt="" class="animate-box img-responsive">
-								</p>
+									</p>
+								<p>
 								<p class="animate-box" data-animate-effect="fadeInLeft"><i class="far fa-arrow-alt-circle-right"></i> <span>View the online-version of the <a href="xml/surrender.xml" target="_blank">RDF/XML</a> of this entity here.</span>
 								</p>
 					
