--- a/rdf.html
+++ b/rdf.html
@@ -95,7 +95,7 @@
 						<p class="animate-box">We created URIs for 3 different entities and we described each of them in RDF/XML, one of the possibile serializations of RDF:
 							<div>
 								<p class="animate-box fadeIn animated">
-									<h4>PEOPLE - Napoleon</h4>: 
+								<h4>PEOPLE - Napoleon</h4><span>:</span> 
 									<p class="animate-box fadeIn animated">
 									<span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon</span></li>
 									</p>
@@ -108,7 +108,7 @@
 
 
 								<p class="animate-box fadeIn animated">
-									<h4>PLACE - Rochefort</h4>: 
+									<h4>PLACE - Rochefort</h4><span>:</span>
 									<p class="animate-box fadeIn animated">
 									<span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Rochefort</span></li>
 									</p>	
@@ -120,7 +120,7 @@
 								</p>
 
 								<p class="animate-box fadeIn animated">
-									<h4>CONCEPT/SUBJECT</h4>: 
+									<h4>CONCEPT/SUBJECT</h4><span>:</span>
 									<p class="animate-box fadeIn animated">
 									<span id="urlMark" style="background-color: #cc0000; opacity:0.8; color:white;">www.semanticweb.org/waterlod/Napoleon_surrender</span></li>
 									</p>
