--- a/portfolio.html
+++ b/portfolio.html
@@ -149,7 +149,7 @@
 						</a>
 					</div>
 				</div>
-				<div class="row animate-box">
+				<div class="animate-box">
 					<h4 class="animate-box" id="subjectSection">SUBJECT/CONCEPT: Defeat</h4>
 					<hr>
 					</br>
