--- a/connection.html
+++ b/connection.html
@@ -92,9 +92,9 @@
                            <div>
                               <p class="animate-box">We have connected our data to other related items, in particular to the <mark style="background-color: #cc0000; opacity:0.8; color:white;">same authorites for names</mark> (people, places, subjects) and to <mark style="background-color: #cc0000; opacity:0.8; color:white;">other resources</mark>, related because of the sharing of one of the features of the object, creating <mark style="background-color: #cc0000; opacity:0.8; color:white;">semantic associations</mark>. In details, <a id="rdfxml">check RDF/XML files</a> of:
                               <p class="animate-box">
-                              <h4>1) PEOPLE - Napoleon: <a href="#rdfpeople">www.semanticweb.org/waterlod/Napoleon</a></h4>
-                              <h4>2) PLACE - Rochefort: <a href="#rdfplace">www.semanticweb.org/waterlod/Rochefort</a></h4>
-                              <h4>3) CONCEPT/SUBJECT - <a href="#rdfconcept">Surrender: www.semanticweb.org/waterlod/Napoleon_surrender</a></h4>
+                              <h4 class="animate-box">1) PEOPLE - Napoleon: <a href="#rdfpeople">www.semanticweb.org/waterlod/Napoleon</a></h4>
+                              <h4 class="animate-box">2) PLACE - Rochefort: <a href="#rdfplace">www.semanticweb.org/waterlod/Rochefort</a></h4>
+                              <h4 class="animate-box">3) CONCEPT/SUBJECT - <a href="#rdfconcept">Surrender: www.semanticweb.org/waterlod/Napoleon_surrender</a></h4>
                               </p>
                               </br>
                               <hr>
