--- a/connection.html
+++ b/connection.html
@@ -93,13 +93,22 @@
                               <p class="animate-box">We have connected our data to other related items, in particular to the <mark style="background-color: #cc0000; opacity:0.8; color:white;">same authorites for names</mark> (people, places, subjects) and to <mark style="background-color: #cc0000; opacity:0.8; color:white;">other resources</mark>, related because of the sharing of one of the features of the object, creating <mark style="background-color: #cc0000; opacity:0.8; color:white;">semantic associations</mark>. In details, <a id="rdfxml">check RDF/XML files</a> of:
                                  <p class="animate-box">
                                     <p>   
-                                       <h4 class="animate-box">1) PEOPLE - Napoleon: <a href="#rdfpeople">www.semanticweb.org/waterlod/Napoleon</a></h4>
+                                       <h4 class="animate-box">1) PEOPLE - Napoleon:</h4>
+                                       <p>
+                                          <a href="#rdfpeople">www.semanticweb.org/waterlod/Napoleon</a>
+                                       </p>
                                     </p>
                                     <p>
-                                       <h4 class="animate-box">2) PLACE - Rochefort: <a href="#rdfplace">www.semanticweb.org/waterlod/Rochefort</a></h4>
+                                       <h4 class="animate-box">2) PLACE - Rochefort:</h4>
+                                       <p>
+                                          <a href="#rdfplace">www.semanticweb.org/waterlod/Rochefort</a></h4>
+                                       </p>
                                     </p>
                                     <p>
-                                       <h4 class="animate-box">3) CONCEPT/SUBJECT - <a href="#rdfconcept">Surrender: www.semanticweb.org/waterlod/Napoleon_surrender</a></h4>
+                                       <h4 class="animate-box">3) CONCEPT/SUBJECT - Surrender:</h4>
+                                       <p>
+                                          <a href="#rdfconcept"> www.semanticweb.org/waterlod/Napoleon_surrender</a>
+                                       </p>
                                     </p>
                                  </p>
                               
@@ -108,7 +117,10 @@
                               <div class="animate-box">
                                  <div class="animate-box">
                                     <p>
-                                       <h4>1) PEOPLE - Napoleon: <a id="rdfpeople">www.semanticweb.org/waterlod/Napoleon</a></h4>
+                                       <h4>1) PEOPLE - Napoleon:</h4> 
+                                       <p>
+                                          <a id="rdfpeople">www.semanticweb.org/waterlod/Napoleon</a>
+                                       </p>
                                     </p>
                                     <p class="animate-box"><mark style="background-color: #cc0000; opacity:0.8; color:white;">owl:sameAs rdf:resource="https://viaf.org/viaf/106964661/"</mark></p>
                                     <p>"owl:sameAs", a property of OWL Ontology, is connected to "<a href="https://viaf.org/viaf/106964661/" target="_blank">https://viaf.org/viaf/106964661/</a>". This means that "www.semanticweb.org/waterlod/Napoleon", the URI of Napoleon, and "https://viaf.org/viaf/106964661/", coming from VIAF, an international authority file,share features. In this case they both concern the person Napoleon.</p>
@@ -153,7 +165,10 @@
                               <div class="animate-box">
                                  <div>
                                     <p>
-                                       <h4>2) PLACE - Rochefort: <a id="rdfplace">www.semanticweb.org/waterlod/Rochefort</a></h4>
+                                       <h4>2) PLACE - Rochefort:</h4>
+                                       <p>
+                                          <a id="rdfplace">www.semanticweb.org/waterlod/Rochefort</a>
+                                       </p>
                                     </p>
                                     <p class="animate-box">
                                     <mark style="background-color: #cc0000; opacity:0.8; color:white;">owl:sameAs rdf:resource="https://viaf.org/viaf/129904479/#Rochefort_(France)</mark>
@@ -211,7 +226,10 @@
                      <div class="animate-box">
                         <div>
                            <p>
-                              <h4>3) CONCEPT/SUBJECT - Surrender: <a id="rdfconcept">www.semanticweb.org/waterlod/Napoleon_surrender</a></h4>
+                              <h4>3) CONCEPT/SUBJECT - Surrender:</h4>
+                              <p>
+                                  <a id="rdfconcept">www.semanticweb.org/waterlod/Napoleon_surrender</a>
+                              </p>
                            </p>
                            <p><mark style="background-color: #cc0000; opacity:0.8; color:white;">
                               skos:broader rdf:resource="http://dbpedia.org/page/Category:Peace_processes"</mark>
