--- a/connection.html
+++ b/connection.html
@@ -31,7 +31,7 @@
                <meta name="twitter:url" content="" />
                <meta name="twitter:card" content="" />
                <!-- Favicon.ico and apple-touch-icon.png -->
-               <link rel="shortcut icon" href="favicon.ico">
+               <link rel="shortcut icon" href="icona.ico">
                <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
                <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
                <!-- Animate.css -->
