--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,8 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Favicon.ico and apple-touch-icon.png -->
-	<link rel="shortcut icon" href="favicon.ico">
+	<link rel="shortcut icon" href="icona.ico">
+
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
