--- a/about.html
+++ b/about.html
@@ -228,7 +228,7 @@
 						<h3>Gianmarco Spinaci</h3>
 						</br>
 						<p>Giammarco is graduated in Computer Science. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Text Retrieval, Bibliometrics and Semantic Web.</p>
-						<ul class="fh5co-social">
+						<ul class="fh5co-social" id="teamGithub">
 							<li><a href="https://github.com/gspinaci"><i class="fab fa-github"></i></a></li>
 						</ul>
 					</div>
@@ -237,7 +237,7 @@
 						<h3>Martina Dello Buono</h3>
 						</br>
 						<p>Martina is graduated in Humanities. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. Her main areas of interest concern Web Design, Computer Graphics and Art.</p>
-						<ul class="fh5co-social">
+						<ul class="fh5co-social" id="teamGithub">
 							<li><a href="https://github.com/martinadellobuono"><i class="fab fa-github"></i></a></li>
 						</ul>
 					</div>
@@ -246,7 +246,7 @@
 						<h3>Fabio Mariani</h3>
 						</br>
 						<p>Fabio is graduated in History. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Knowledge Organization, Museology, Museography and Virtual Environments.</p>
-						<ul class="fh5co-social">
+						<ul class="fh5co-social" id="teamGithub">
 							<li><a href="https://github.com/Fax93"><i class="fab fa-github"></i></a></li>
 						</ul>
 					</div>
