--- a/about.html
+++ b/about.html
@@ -102,7 +102,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-								<i class="fas fa-sitemap" style="font-size:50px;"></i>
+								<i class="fas fa-sitemap" id="iFeature" style="font-size:50px;"></i>
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="er.html" alt="E/R Model">E/R model</strong></a></h3>
@@ -113,7 +113,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-							<i class="fas fa-chess-knight" style="font-size:50px;"></i>	
+							<i class="fas fa-chess-knight" id="iFeature" style="font-size:50px;"></i>	
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="portfolio.html" alt="Our Object">Items</a></strong></h3>
@@ -125,7 +125,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-							<i class="far fa-object-group" style="font-size:50px;"></i>	
+							<i class="far fa-object-group" id="iFeature" style="font-size:50px;"></i>	
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="metadata.html" alt="Metadata standards and alignement">Metadata standards alignement</a></strong></h3>
@@ -136,7 +136,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-								<i class="fab fa-codepen" style="font-size:50px;"></i>	
+								<i class="fab fa-codepen" id="iFeature" style="font-size:50px;"></i>	
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="theoretical.html" alt="">Theoretical model</a></strong></h3>
@@ -147,7 +147,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-							<i class="far fa-object-group" style="font-size:50px;"></i>	
+							<i class="far fa-object-group" id="iFeature" style="font-size:50px;"></i>	
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="conceptual.html" alt="">Conceptual model</a></strong></h3>
@@ -165,7 +165,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-								<i class="far fa-map" style="font-size:50px;"></i>
+								<i class="far fa-map" id="iFeature" style="font-size:50px;"></i>
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="description.html" alt="">Description of data</a></strong></h3>
@@ -177,7 +177,7 @@
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
 							<div class="fh5co-icon">
-							<i class="far fa-file-code" style="font-size:50px;"></i>	
+							<i class="far fa-file-code" id="iFeature" style="font-size:50px;"></i>	
 							</div>
 							<div class="fh5co-text">
 								<h3><strong><a href="rdf.html" alt="Metadata standards and alignement">RDF</a></strong></h3>
@@ -187,7 +187,7 @@
 					</div>
 					<div class="col-md-6">
 						<div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
-							<div class="fh5co-icon">
+							<div class="fh5co-icon" id="iFeature">
 								<img src="images/link.jpg">
 							</div>
 							<div class="fh5co-text">
