--- a/conceptual.html
+++ b/conceptual.html
@@ -1,195 +1,179 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!-->
-<html class="no-js">
-<!--<![endif]-->
-
-<head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Battle of WaterLOD</title>
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Free HTML5 Website Template by FreeHTML5.co" />
-	<meta name="keywords" content="free html5, free template, free bootstrap, free website template, html5, css3, mobile first, responsive"
-	/>
-	<meta name="author" content="FreeHTML5.co" />
-
-	<!-- Facebook and Twitter integration -->
-	<meta property="og:title" content="" />
-	<meta property="og:image" content="" />
-	<meta property="og:url" content="" />
-	<meta property="og:site_name" content="" />
-	<meta property="og:description" content="" />
-	<meta name="twitter:title" content="" />
-	<meta name="twitter:image" content="" />
-	<meta name="twitter:url" content="" />
-	<meta name="twitter:card" content="" />
-
-	<!-- Favicon.ico and apple-touch-icon.png -->
-	<link rel="shortcut icon" href="icona.ico">
-
-	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
-	<link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
-
-	<!-- Animate.css -->
-	<link rel="stylesheet" href="css/animate.css">
-	<!-- Icomoon Icon Fonts-->
-	<link rel="stylesheet" href="css/icomoon.css">
-	<!-- Bootstrap  -->
-	<link rel="stylesheet" href="css/bootstrap.css">
-	<!-- Owl Carousel -->
-	<link rel="stylesheet" href="css/owl.carousel.min.css">
-	<link rel="stylesheet" href="css/owl.theme.default.min.css">
-	<!-- Theme style  -->
-	<link rel="stylesheet" href="css/style.css">
-	<!--Google Fonts-->
-	<link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
-	<!--Fontawesome-->
-	<script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
-	  crossorigin="anonymous"></script>
-
-
-
-	<!-- Modernizr JS -->
-	<script src="js/modernizr-2.6.2.min.js"></script>
-	<!-- FOR IE9 below -->
-	<!--[if lt IE 9]>
-	<script src="js/respond.min.js"></script>
-	<![endif]-->
-
-</head>
-
-<body>
-	<div id="fh5co-page">
-		<a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle">
-			<i></i>
-		</a>
-		<aside id="fh5co-aside" role="complementary" class="border js-fullheight">
-
-			<h1 id="fh5co-logo">
-				<a href="index.html">
-					<img src="images/logo.png" alt="Free HTML5 Bootstrap Website Template">
-				</a>
-			</h1>
-			<nav id="fh5co-main-menu" role="navigation">
-				<ul>
-					<li>
-						<a href="index.html">Home</a>
-					</li>
-					<li class="fh5co-active">
-						<a href="about.html">Project</a>
-					</li>
-					<li>
-						<a href="contact.html">Contact</a>
-					</li>
-				</ul>
-			</nav>
-
-			<div class="fh5co-footer">
-				<p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci
-				<span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small></p>
-				<ul>
-					<li><a href="https://github.com/WaterLOD"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
-				</ul>
-			</div>
-
-		</aside>
-
-		<div id="fh5co-main">
-			<div id="backgroundImg">
-				<div class="fh5co-narrow-content">
-					<nav aria-label="breadcrumb">
-						<ol class="breadcrumb">
-							<li class="breadcrumb-item">
-								<a href="about.html#workflow">Project - Workflow</a>
-							</li>
-							<li class="breadcrumb-item active" aria-current="page">Conceptual model</li>
-						</ol>
-					</nav>
-					<h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="top">
-						Conceptual model
-					</h2>
-					<div>
-						<p class="animate-box">
-							In this section, we present the conceptual model that has to answer the previous questions and then wrap data. For each type
-							of class describable, here we define all the right properties, from the ontologies, filling up the following tables.
-					</div>
-					<div>
-						<h3 class="animate-box" id="who">People</h3>
-						<p class="animate-box">As we already describe in the theoretical model for answering the question we are going to use
-							<mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark>. In the properties table will be used the namespace ​eac-cpf defined. A little note here: we need to
-							add more information about the type of relations adding the description property given by
-							<mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core</mark> (and the properties defined by
-							<mark style="background-color: #cc0000; opacity:0.8; color:white;">DCTERMS</mark>).
-						</p>
-						<p class="animate-box">
-							<img style="width: 1000px;" src="images/who(final).png" alt="" class="img-responsive">
-						</p>
-						<br>
-
-						<h3 class="animate-box" id="who">Date</h3>
-						<p class="animate-box">The date is described in the format proposed by the
-							<mark style="background-color: #cc0000; opacity:0.8; color:white;">w3 Consortium</mark>. In particular, for what concern our case, we opted for the following implementation:
-							<mark style="background-color: #cc0000; opacity:0.8; color:white;">DD/MM/YYYY​</mark>. This is the proper format used in Central and South Europe, in particular in Italy.
-						</p>
-						<br>
-
-						<h3 class="animate-box" id="who">Place</h3>
-						<p class="animate-box">
-							We choose to describe places with the <mark style="background-color: #cc0000; opacity:0.8; color:white;">GeoNames Ontology</mark> and the <mark style="background-color: #cc0000; opacity:0.8; color:white;">Basic Geo (WGS84 lat/long) Vocabulary</mark>. In fact, for answering
-							at the questions we should define the following namespaces.
-						</p>
-						<p class="animate-box">
-							<img style="width: 1000px;" src="images/where(final).png" alt="" class="img-responsive">
-						</p>
-						<br>
-
-						<h3 class="animate-box" id="who">Concept / Subject</h3>
-						<p class="animate-box">
-								For answering the questions raised during the theoretical model development we have used the <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> ontologies. defined as follows:
-						</p>
-						<p class="animate-box">
-								<img style="width: 1000px;" src="images/what(final).png" alt="" class="img-responsive">
-							</p>
-						<br>
-
-						<nav aria-label="...">
-							<ul class="pager">
-								<li class="previous">
-									<a href="theoretical.html">
-										<span aria-hidden="true">&larr;</span> Theoretical model</a>
-								</li>
-								<li class="next">
-									<a href="description.html">Description of data
-										<span aria-hidden="true">&rarr;</span>
-									</a>
-								</li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-
-				<!-- jQuery -->
-				<script src="js/jquery.min.js"></script>
-				<!-- jQuery Easing -->
-				<script src="js/jquery.easing.1.3.js"></script>
-				<!-- Bootstrap -->
-				<script src="js/bootstrap.min.js"></script>
-				<!-- Carousel -->
-				<script src="js/owl.carousel.min.js"></script>
-				<!-- Stellar -->
-				<script src="js/jquery.stellar.min.js"></script>
-				<!-- Waypoints -->
-				<script src="js/jquery.waypoints.min.js"></script>
-				<!-- Counters -->
-				<script src="js/jquery.countTo.js"></script>
-
-
-				<!-- MAIN JS -->
-				<script src="js/main.js"></script>
-
-</body>
-
-</html>
+<!--[if lt IE 7]>      
+<html class="no-js lt-ie9 lt-ie8 lt-ie7">
+   <![endif]-->
+   <!--[if IE 7]>         
+   <html class="no-js lt-ie9 lt-ie8">
+      <![endif]-->
+      <!--[if IE 8]>         
+      <html class="no-js lt-ie9">
+         <![endif]-->
+         <!--[if gt IE 8]><!-->
+         <html class="no-js">
+            <!--<![endif]-->
+            <head>
+               <meta charset="utf-8">
+               <meta http-equiv="X-UA-Compatible" content="IE=edge">
+               <title>Battle of WaterLOD</title>
+               <meta name="viewport" content="width=device-width, initial-scale=1">
+               <meta name="description" content="" />
+               <meta name="keywords" content=""
+                  />
+               <meta name="author" content="" />
+               <!-- Facebook and Twitter integration -->
+               <meta property="og:title" content="" />
+               <meta property="og:image" content="" />
+               <meta property="og:url" content="" />
+               <meta property="og:site_name" content="" />
+               <meta property="og:description" content="" />
+               <meta name="twitter:title" content="" />
+               <meta name="twitter:image" content="" />
+               <meta name="twitter:url" content="" />
+               <meta name="twitter:card" content="" />
+               <!-- Favicon.ico and apple-touch-icon.png -->
+               <link rel="shortcut icon" href="icona.ico">
+               <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,600,400italic,700' rel='stylesheet' type='text/css'>
+               <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+               <!-- Animate.css -->
+               <link rel="stylesheet" href="css/animate.css">
+               <!-- Icomoon Icon Fonts-->
+               <link rel="stylesheet" href="css/icomoon.css">
+               <!-- Bootstrap  -->
+               <link rel="stylesheet" href="css/bootstrap.css">
+               <!-- Owl Carousel -->
+               <link rel="stylesheet" href="css/owl.carousel.min.css">
+               <link rel="stylesheet" href="css/owl.theme.default.min.css">
+               <!-- Theme style  -->
+               <link rel="stylesheet" href="css/style.css">
+               <!--Google Fonts-->
+               <link href="https://fonts.googleapis.com/css?family=Nanum+Gothic" rel="stylesheet">
+               <!--Fontawesome-->
+               <script defer src="https://use.fontawesome.com/releases/v5.0.9/js/all.js" integrity="sha384-8iPTk2s/jMVj81dnzb/iFR2sdA7u06vHJyyLlAd4snFpCl/SnyUjRrbdJsw1pGIl"
+                  crossorigin="anonymous"></script>
+               <!-- Modernizr JS -->
+               <script src="js/modernizr-2.6.2.min.js"></script>
+               <!-- FOR IE9 below -->
+               <!--[if lt IE 9]>
+               <script src="js/respond.min.js"></script>
+               <![endif]-->
+            </head>
+            <body>
+               <div id="fh5co-page">
+               <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" alt="Toggle">
+               <i></i>
+               </a>
+               <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
+                  <h1 id="fh5co-logo">
+                     <a href="index.html" alt="Index">
+                     <img src="images/logo.png" alt="Website logo of Napoleon">
+                     </a>
+                  </h1>
+                  <nav id="fh5co-main-menu" role="navigation">
+                     <ul>
+                        <li>
+                           <a href="index.html" alt="Home">Home</a>
+                        </li>
+                        <li class="fh5co-active">
+                           <a href="about.html" alt="Project">Project</a>
+                        </li>
+                        <li>
+                           <a href="contact.html" alt="Contact">Contact</a>
+                        </li>
+                     </ul>
+                  </nav>
+                  <div class="fh5co-footer">
+                     <p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci
+                        <span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" alt="Copyright Creative Commons">Copyright Creative Commons</a></span></small>
+                     </p>
+                     <ul>
+                        <li><a href="https://github.com/WaterLOD" alt="Link to Github page of the project"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
+                     </ul>
+                  </div>
+               </aside>
+               <div id="fh5co-main">
+               <div id="backgroundImg">
+               <div class="fh5co-narrow-content">
+                  <nav aria-label="breadcrumb">
+                     <ol class="breadcrumb">
+                        <li class="breadcrumb-item">
+                           <a href="about.html#workflow" alt="Project workflow">Project - Workflow</a>
+                        </li>
+                        <li class="breadcrumb-item active" aria-current="page">Conceptual model</li>
+                     </ol>
+                  </nav>
+                  <h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft" id="top">
+                     Conceptual model
+                  </h2>
+                  <div>
+                     <p class="animate-box">
+                        In this section, we present the conceptual model that has to answer the previous questions and then wrap data. For each type
+                        of class describable, here we define all the right properties, from the ontologies, filling up the following tables.
+                  </div>
+                  <div>
+                     <h3 class="animate-box" id="who">People</h3>
+                     <p class="animate-box">As we already describe in the theoretical model for answering the question we are going to use
+                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark>. In the properties table will be used the namespace ​eac-cpf defined. A little note here: we need to
+                        add more information about the type of relations adding the description property given by
+                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core</mark> (and the properties defined by
+                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">DCTERMS</mark>).
+                     </p>
+                     <p class="animate-box">
+                        <img style="width: 1000px;" src="images/who(final).png" alt="" class="img-responsive">
+                     </p>
+                     <br>
+                     <h3 class="animate-box" id="who">Date</h3>
+                     <p class="animate-box">The date is described in the format proposed by the
+                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">w3 Consortium</mark>. In particular, for what concern our case, we opted for the following implementation:
+                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">DD/MM/YYYY​</mark>. This is the proper format used in Central and South Europe, in particular in Italy.
+                     </p>
+                     <br>
+                     <h3 class="animate-box" id="who">Place</h3>
+                     <p class="animate-box">
+                        We choose to describe places with the <mark style="background-color: #cc0000; opacity:0.8; color:white;">GeoNames Ontology</mark> and the <mark style="background-color: #cc0000; opacity:0.8; color:white;">Basic Geo (WGS84 lat/long) Vocabulary</mark>. In fact, for answering
+                        at the questions we should define the following namespaces.
+                     </p>
+                     <p class="animate-box">
+                        <img style="width: 1000px;" src="images/where(final).png" alt="" class="img-responsive">
+                     </p>
+                     <br>
+                     <h3 class="animate-box" id="who">Concept / Subject</h3>
+                     <p class="animate-box">
+                        For answering the questions raised during the theoretical model development we have used the <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> ontologies. defined as follows:
+                     </p>
+                     <p class="animate-box">
+                        <img style="width: 1000px;" src="images/what(final).png" alt="" class="img-responsive">
+                     </p>
+                     <br>
+                     <nav aria-label="...">
+                        <ul class="pager">
+                           <li class="previous">
+                              <a href="theoretical.html" alt="Theoretical model">
+                              <span aria-hidden="true">&larr;</span> Theoretical model</a>
+                           </li>
+                           <li class="next">
+                              <a href="description.html" alt="Description of data">Description of data
+                              <span aria-hidden="true">&rarr;</span>
+                              </a>
+                           </li>
+                        </ul>
+                     </nav>
+                  </div>
+               </div>
+               <!-- jQuery -->
+               <script src="js/jquery.min.js"></script>
+               <!-- jQuery Easing -->
+               <script src="js/jquery.easing.1.3.js"></script>
+               <!-- Bootstrap -->
+               <script src="js/bootstrap.min.js"></script>
+               <!-- Carousel -->
+               <script src="js/owl.carousel.min.js"></script>
+               <!-- Stellar -->
+               <script src="js/jquery.stellar.min.js"></script>
+               <!-- Waypoints -->
+               <script src="js/jquery.waypoints.min.js"></script>
+               <!-- Counters -->
+               <script src="js/jquery.countTo.js"></script>
+               <!-- MAIN JS -->
+               <script src="js/main.js"></script>
+            </body>
+         </html>
