--- a/about.html
+++ b/about.html
@@ -55,22 +55,22 @@
             </head>
             <body>
                <div id="fh5co-page">
-                  <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i></a>
+                  <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" alt="Toggle"><i></i></a>
                   <aside id="fh5co-aside" role="complementary" class="border">
-                     <h1 id="fh5co-logo"><a href="index.html"><img src="images/logo.png" alt="Website Logo of Napoleon"></a></h1>
+                     <h1 id="fh5co-logo"><a href="index.html" alt="Website logo of Napoleon"><img src="images/logo.png" alt="Website Logo of Napoleon"></a></h1>
                      <nav id="fh5co-main-menu" role="navigation">
                         <ul>
-                           <li><a href="index.html">Home</a></li>
-                           <li class="fh5co-active"><a href="about.html">Project</a></li>
-                           <li><a href="contact.html">Contact</a></li>
+                           <li><a href="index.html" alt="Home">Home</a></li>
+                           <li class="fh5co-active"><a href="about.html" alt="Project">Project</a></li>
+                           <li><a href="contact.html" alt="Contact">Contact</a></li>
                         </ul>
                      </nav>
                      <div class="fh5co-footer">
                         <p><small>WaterLOD project has been implemented by Martina Dello Buono, Fabio Mariani and Gianmarco Spinaci
-                           <span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Copyright Creative Commons</a></span></small>
+                           <span><a href="https://creativecommons.org/licenses/by-sa/4.0/" target="_blank" alt="Copyright Creative Commons">Copyright Creative Commons</a></span></small>
                         </p>
                         <ul>
-                           <li><a href="https://github.com/WaterLOD"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
+                           <li><a href="https://github.com/WaterLOD" alt="Github page of the project"><img src="images/github-logo.png"<i class="icon-facebook"></i></a></li>
                         </ul>
                      </div>
                   </aside>
@@ -215,16 +215,16 @@
                               </br>
                               <p>Giammarco is graduated in Computer Science. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Text Retrieval, Bibliometrics and Semantic Web.</p>
                               <ul class="fh5co-social" id="teamGithub">
-                                 <li><a href="https://github.com/gspinaci"><i class="fab fa-github"></i></a></li>
+                                 <li><a href="https://github.com/gspinaci" alt="Giammarco Spinaci"><i class="fab fa-github"></i></a></li>
                               </ul>
                            </div>
                            <div class="col-md-4 fh5co-staff">
-                              <img src="images/martina.jpeg" alt="Martina Dello Buono" class="img-responsive">
+                              <img src="images/martina.jpeg" class="img-responsive">
                               <h3>Martina Dello Buono</h3>
                               </br>
                               <p>Martina is graduated in Humanities. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. Her main areas of interest concern Web Design, Computer Graphics and Art.</p>
                               <ul class="fh5co-social" id="teamGithub">
-                                 <li><a href="https://github.com/martinadellobuono"><i class="fab fa-github"></i></a></li>
+                                 <li><a href="https://github.com/martinadellobuono" alt="Martina Dello Buono"><i class="fab fa-github"></i></a></li>
                               </ul>
                            </div>
                            <div class="col-md-4 fh5co-staff">
@@ -233,7 +233,7 @@
                               </br>
                               <p>Fabio is graduated in History. He is now attending the Two Years Master Digital Humanities and Digital Knowledge at Alma Mater Studiorum - University of Bologna. His main areas of interest concern Knowledge Organization, Museology, Museography and Virtual Environments.</p>
                               <ul class="fh5co-social" id="teamGithub">
-                                 <li><a href="https://github.com/Fax93"><i class="fab fa-github"></i></a></li>
+                                 <li><a href="https://github.com/Fax93" alt="Fabio Mariani"><i class="fab fa-github"></i></a></li>
                               </ul>
                            </div>
                         </div>
