--- a/about.html
+++ b/about.html
@@ -178,7 +178,7 @@
                            <div class="col-md-6">
                               <div class="fh5co-feature animate-box" data-animate-effect="fadeInLeft">
                                  <div class="fh5co-icon" id="iFeature">
-                                    <img src="images/link.jpg">
+                                    <img src="images/link.jpg" alt="Image of a network">
                                  </div>
                                  <div class="fh5co-text">
                                     <h3><strong><a href="connection.html" alt="Connection to autorities">Connection to authorities <span>and other resources</span></a></strong></h3>
