--- a/conceptual.html
+++ b/conceptual.html
@@ -112,36 +112,37 @@
                   <div>
                      <h3 class="animate-box" id="who">People</h3>
                      <p class="animate-box">As we already describe in the theoretical model for answering the question we are going to use
-                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">EAC-CPF</mark>. In the properties table will be used the namespace ​eac-cpf defined. A little note here: we need to
+                        <mark>EAC-CPF</mark>. In the properties table will be used the namespace ​eac-cpf defined. A little note here: we need to
                         add more information about the type of relations adding the description property given by
-                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">Dublin Core</mark> (and the properties defined by
-                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">DCTERMS</mark>).
+                        <mark>Dublin Core</mark> (and the properties defined by
+                        <mark>DCTERMS</mark>).
                      </p>
                      <p class="animate-box">
-                        <img style="width: 1000px;" src="images/who(final).png" alt="" class="img-responsive">
+                        <img style="width: 1000px;" src="images/who(final).png" alt="Conceptual model" class="img-responsive">
                      </p>
                      <br>
                      <h3 class="animate-box" id="who">Date</h3>
                      <p class="animate-box">The date is described in the format proposed by the
-                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">w3 Consortium</mark>. In particular, for what concern our case, we opted for the following implementation:
-                        <mark style="background-color: #cc0000; opacity:0.8; color:white;">DD/MM/YYYY​</mark>. This is the proper format used in Central and South Europe, in particular in Italy.
+                        <mark>w3 Consortium</mark>. In particular, for what concern our case, we opted for the following implementation:
+                        <mark>DD/MM/YYYY​</mark>. This is the proper format used in Central and South Europe, in particular in Italy.
                      </p>
                      <br>
                      <h3 class="animate-box" id="who">Place</h3>
                      <p class="animate-box">
-                        We choose to describe places with the <mark style="background-color: #cc0000; opacity:0.8; color:white;">GeoNames Ontology</mark> and the <mark style="background-color: #cc0000; opacity:0.8; color:white;">Basic Geo (WGS84 lat/long) Vocabulary</mark>. In fact, for answering
+                        We choose to describe places with the <mark>GeoNames Ontology</mark> and the <mark>Basic Geo (WGS84 lat/long) Vocabulary</mark>. In fact, for answering
                         at the questions we should define the following namespaces.
                      </p>
                      <p class="animate-box">
-                        <img style="width: 1000px;" src="images/where(final).png" alt="" class="img-responsive">
+                        <img style="width: 1000px;" src="images/where(final).png" alt="Conceptual model" class="img-responsive">
                      </p>
                      <br>
                      <h3 class="animate-box" id="who">Concept / Subject</h3>
                      <p class="animate-box">
-                        For answering the questions raised during the theoretical model development we have used the <mark style="background-color: #cc0000; opacity:0.8; color:white;">DC</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">RDF(S)</mark>, <mark style="background-color: #cc0000; opacity:0.8; color:white;">CIDOC-CRM</mark> and <mark style="background-color: #cc0000; opacity:0.8; color:white;">FOAF</mark> ontologies. defined as follows:
+                        For answering the questions raised during the theoretical model development we have used the <mark>DC</mark>,
+                        <mark>RDF(S)</mark>, <mark>CIDOC-CRM</mark> and <mark>FOAF</mark> ontologies. defined as follows:
                      </p>
                      <p class="animate-box">
-                        <img style="width: 1000px;" src="images/what(final).png" alt="" class="img-responsive">
+                        <img style="width: 1000px;" src="images/what(final).png" alt="Conceptual model" class="img-responsive">
                      </p>
                      <br>
                      <nav aria-label="...">
