--- a/connection.html
+++ b/connection.html
@@ -89,7 +89,11 @@
                      Connection to authorities and other resources
                   </h2>
                   <div>
-                     <p class="animate-box">We have connected our data to other related items, in particular to the <mark style="background-color: #cc0000; opacity:0.8; color:white;">same authorites for names</mark> (people, places, subjects) and to <mark style="background-color: #cc0000; opacity:0.8; color:white;">other resources</mark>, related because of the sharing of one of the features of the object, creating <mark style="background-color: #cc0000; opacity:0.8; color:white;">semantic associations</mark>. In details, <a id="rdfxml">check RDF/XML files</a> of:
+                     <p class="animate-box">We have connected our data to other related items,
+                        in particular to the <mark>same authorites for names</mark>
+                        (people, places, subjects) and to <mark>other resources</mark>, 
+                        related because of the sharing of one of the features of the object, creating
+                        <mark>semantic associations</mark>. In details, <a id="rdfxml">check RDF/XML files</a> of:
                      <p class="animate-box">
                      <p class="animate-box">   
                      <h4 class="animate-box">1) PEOPLE - Napoleon:
@@ -116,12 +120,12 @@
                               <a id="rdfpeople" alt="URL Napoleon">www.semanticweb.org/waterlod/Napoleon</a>
                            </h4>
                            </p>
-                           <p class="animate-box"><mark style="background-color: #cc0000; opacity:0.8; color:white;">owl:sameAs rdf:resource="https://viaf.org/viaf/106964661/"</mark></p>
+                           <p class="animate-box"><mark>owl:sameAs rdf:resource="https://viaf.org/viaf/106964661/"</mark></p>
                            <p class="animate-box">"owl:sameAs", a property of OWL Ontology, is connected to "<a href="https://viaf.org/viaf/106964661/" target="_blank" alt="URL Viaf">https://viaf.org/viaf/106964661/</a>". This means that "www.semanticweb.org/waterlod/Napoleon", the URI of Napoleon, and "https://viaf.org/viaf/106964661/", coming from VIAF, an international authority file,share features. In this case they both concern the person Napoleon.</p>
                         </div>
                         <div class="animate-box>
                            <p class="animate-box">
-                           <mark style="background-color: #cc0000; opacity:0.8; color:white;">owl:sameAs rdf:resource="http://dbpedia.org/page/Napoleon"</mark></p>
+                           <mark>owl:sameAs rdf:resource="http://dbpedia.org/page/Napoleon"</mark></p>
                            <p class="animate-box">"owl:sameAs", a property of OWL Ontology, is connected
                               to "<a href="http://dbpedia.org/page/Napoleon" target="_blank" alt="URL dbpedia">
                               http://dbpedia.org/page/Napoleon</a>". This means that "www.semanticweb.org/waterlod/Napoleon",
@@ -131,8 +135,8 @@
                         </div>
                         <div class="animate-box>
                            <p class="animate-box">
-                           <mark style="background-color: #cc0000;
-                              opacity:0.8; color:white;">owl:differentFrom
+                           <mark>owl:differentFrom
+                             
                            rdf:resource="http://dbpedia.org/page/Napoleon_III"</mark>
                            </p>
                            <p class="animate-box">"owl:differentFrom", a property of OWL Ontology,
@@ -161,7 +165,7 @@
                            </h4>
                            </p>
                            <p class="animate-box">
-                              <mark style="background-color: #cc0000; opacity:0.8; color:white;">owl:sameAs rdf:resource="https://viaf.org/viaf/129904479/#Rochefort_(France)</mark>
+                              <mark>owl:sameAs rdf:resource="https://viaf.org/viaf/129904479/#Rochefort_(France)</mark>
                            </p>
                            <p class="animate-box">"owl:sameAs", a property of 
                               OWL Ontology, is connected to 
@@ -175,7 +179,7 @@
                         </div>
                         <div class="animate-box">
                            <p class="animate-box">
-                              <mark style="background-color: #cc0000; opacity:0.8; color:white;">owl:sameAs rdf:resource="http://dbpedia.org/page/Rochefort,_Charente-Maritime"</mark>
+                              <mark>owl:sameAs rdf:resource="http://dbpedia.org/page/Rochefort,_Charente-Maritime"</mark>
                            </p>
                            <p class="animate-box">"owl:sameAs", a property of OWL Ontology, is connected to
                               "<a href="http://dbpedia.org/page/Napoleon" target="_blank" alt="URL dbpedia">
@@ -188,7 +192,7 @@
                         </div>
                         <div class="animate-box">
                            <p class="animate-box">
-                              <mark style="background-color: #cc0000; opacity:0.8; color:white;">
+                              <mark>
                               owl:differentFrom rdf:resource="http://it.dbpedia.org/resource/Cantone_di_Rochefort-en-Terre/html"</mark>
                            </p>
                            <p class="animate-box">"owl:differentFrom", a property of OWL Ontology, is connected to
@@ -213,7 +217,7 @@
                               <a id="rdfconcept" alt="URL Napoleon Surrender">www.semanticweb.org/waterlod/Napoleon_surrender</a>
                            </h4>
                            </p>
-                           <p class="animate-box"><mark style="background-color: #cc0000; opacity:0.8; color:white;">
+                           <p class="animate-box"><mark>
                               skos:broader rdf:resource="http://dbpedia.org/page/Category:Peace_processes"</mark>
                            </p>
                            <p class="animate-box">"skos:broader", a property of SKOS, a Semantic
@@ -227,7 +231,7 @@
                            </p>
                         </div>
                         <div class="animate-box">
-                           <p class="animate-box"><mark style="background-color: #cc0000; opacity:0.8; color:white;">"skos:broader"
+                           <p class="animate-box"><mark>"skos:broader"
                               rdf:resource="http://dbpedia.org/page/Category:Dispute_resolution"</mark>
                            </p>
                            <p class="animate-box">"skos:broader" a property of SKOS, a Semantic Web-driven method 
@@ -242,8 +246,7 @@
                         </div>
                         <div class="animate-box">
                            <p class="animate-box">
-                              <mark style="background-color: #cc0000; opacity:0.8;
-                                 color:white;">wn:hypernym rdf:resource="http://dbpedia.org/page/Dialogue"</mark>
+                              <mark>wn:hypernym rdf:resource="http://dbpedia.org/page/Dialogue"</mark>
                            </p>
                            <p class="animate-box">"wn:hypernym", a property of WordNet,
                               a semantic network, is connected to "<a href="http://dbpedia.org/page/Dialogue"
