--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
                <div id="fh5co-page">
                   <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle dark" alt="Toggle"><i></i></a>
                   <aside id="fh5co-aside" role="complementary" class="js-fullheight">
-                     <h1 id="fh5co-logo"><a href="index.html" alt="Website logo of Napoleon"><img src="images/logo.png" alt=""></a></h1>
+                     <h1 id="fh5co-logo"><a href="index.html" alt="Website logo of Napoleon"><img src="images/logo.png" alt="Website logo of Napoleon"></a></h1>
                      <nav id="fh5co-main-menu" role="navigation">
                         <ul>
                            <li><a href="index.html" alt="Home">Home</a></li>
