--- a/description.html
+++ b/description.html
@@ -59,7 +59,7 @@
                <div id="fh5co-page">
                <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" alt="Toggle"><i></i></a>
                <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
-                  <h1 id="fh5co-logo"><a href="index.html" alt="Index"><img src="images/logo.png" alt=""></a></h1>
+                  <h1 id="fh5co-logo"><a href="index.html" alt="Index"><img src="images/logo.png" alt="Website logo of Napoleon"></a></h1>
                   <nav id="fh5co-main-menu" role="navigation">
                      <ul>
                         <li><a href="index.html" alt="Home">Home</a></li>
@@ -89,8 +89,8 @@
                      Description of data
                   </h2>
                   <div>
-                     <p class="animate-box">We have <mark style="background-color: #cc0000; opacity:0.8; color:white;">described some items, using natural language, using our model</mark>. We have created a shared folder in Google Drive containing all the needed files <a href="https://drive.google.com/drive/folders/1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" target="_blank">here</a>, so you can click on the links.</p>
-                     <p class="animate-box"><img src="images/table.png" style="width:80%" class="img-responsive"></p>
+                     <p class="animate-box">We have <mark>described some items, using natural language, using our model</mark>. We have created a shared folder in Google Drive containing all the needed files <a href="https://drive.google.com/drive/folders/1YXpVIixVn0IR1Wn89T91GYNGBDvbuhsR" target="_blank">here</a>, so you can click on the links.</p>
+                     <p class="animate-box"><img src="images/table.png" style="width:80%" class="img-responsive" alt="Descriptions"></p>
                      <p class="animate-box">So, we have done the <a id="descrizioni">descriptions</a> of:</p>
                      <ul class="animate-box">
                         <li><a href="#persona" alt="Person">PERSON</a>: Napoleon and Fauveau</li>
@@ -102,12 +102,12 @@
                      <ul class="animate-box">
                         <li class="animate-box">
                            <h4>Napoleon</h4>
-                           <img src="images/napoleon.png" class="img-responsive animate-box">
+                           <img src="images/napoleon.png" class="img-responsive animate-box" alt="Napoleon description">
                         </li>
                         <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
                         <li class="animate-box">
                            <h4>Fauveau</h4>
-                           <img src="images/fauveau.png" class="img-responsive animate-box">
+                           <img src="images/fauveau.png" class="img-responsive animate-box" alt="Foveau description">
                         </li>
                         <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
                      </ul>
@@ -117,17 +117,17 @@
                      <ul class="animate-box">
                         <li class="animate-box">
                            <h4>Surrender</h4>
-                           <img src="images/surrender.png" class="img-responsive animate-box">
+                           <img src="images/surrender.png" class="img-responsive animate-box" alt="Surrender description">
                         </li>
                         <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
                         <li class="animate-box">
                            <h4>General</h4>
-                           <img src="images/general.png" class="img-responsive animate-box">
+                           <img src="images/general.png" class="img-responsive animate-box" alt="General description">
                         </li>
                         <p class="animate-box">Go back to the <a href="#descrizioni" alt="Descriptions">descriptions</a></p>
                         <li class="animate-box">
                            <h4>Killed</h4>
-                           <img src="images/killed.png" class="img-responsive animate-box">
+                           <img src="images/killed.png" class="img-responsive animate-box" alt="Killed description">
                         </li>
                         <p class="animate-box">Go back to the <a href="#descrizioni" alt="descriptions">descriptions</a></p>
                      </ul>
@@ -137,12 +137,12 @@
                      <ul class="animate-box">
                         <li class="animate-box">
                            <h4>Rochefort</h4>
-                           <img src="images/rochefort.png" class="img-responsive animate-box">
+                           <img src="images/rochefort.png" class="img-responsive animate-box" alt="Rochefort description">
                         </li>
                         <p class="animate-box">Go back to the <a href="#descrizioni" alt="descriptions">descriptions</a></p>
                         <li class="animate-box">
                            <h4>Waterloo</h4>
-                           <img src="images/waterloo.png" class="img-responsive animate-box">
+                           <img src="images/waterloo.png" class="img-responsive animate-box" alt="Waterloo description">
                         </li>
                         <p class="animate-box">Go back to the <a href="#descrizioni" alt="descriptions">descriptions</a></p>
                      </ul>
