--- a/er.html
+++ b/er.html
@@ -89,15 +89,15 @@
                         E/R Model
                      </h2>
                      <div>
-                        <p class="fh5co animate-box">This model, called <mark style="background-color: #cc0000; opacity:0.8; color:white;">E/R model</mark>, relates the central idea "Battle of Waterloo" to the person "Napoleon Bonaparte", the place "Waterloo", the date "1815" and the concept "Defeat".</p>
+                        <p class="fh5co animate-box">This model, called <mark>E/R model</mark>, relates the central idea "Battle of Waterloo" to the person "Napoleon Bonaparte", the place "Waterloo", the date "1815" and the concept "Defeat".</p>
                         <hr class="my-4 fh5co animate-box">
                         <p class="fh5co animate-box">In these model we have:
                         <ul class="my-4 fh5co animate-box">
-                           <li class="my-4 fh5co animate-box"><mark style="background-color: #cc0000; opacity:0.8; color:white;">Entities</mark>, which are represented as rectangles</li>
-                           <li class="my-4 fh5co animate-box"><mark style="background-color: #cc0000; opacity:0.8; color:white;">Relationships</mark>, which are represented as rhombus</li>
+                           <li class="my-4 fh5co animate-box"><mark>Entities</mark>, which are represented as rectangles</li>
+                           <li class="my-4 fh5co animate-box"><mark>Relationships</mark>, which are represented as rhombus</li>
                         </ul>
                         </p>
-                        <img src="images/er.jpg" style="width:100%" class="fh5co-heading animate-box img-responsive">
+                        <img src="images/er.jpg" style="width:100%" class="fh5co-heading animate-box img-responsive" alt="E/R Model">
                      </div>
                      <nav aria-label="...">
                         <ul class="pager">
