--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                <div id="fh5co-page">
                   <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle" alt="Toggle"><i></i></a>
                   <aside id="fh5co-aside" role="complementary" class="border js-fullheight">
-                     <h1 id="fh5co-logo"><a href="index.html" alt="Website logo of Napoleon"><img src="images/logo.png" alt=""></a></h1>
+                     <h1 id="fh5co-logo"><a href="index.html" alt="Website logo of Napoleon"><img src="images/logo.png" alt="Website Logo of Napoleon"></a></h1>
                      <nav id="fh5co-main-menu" role="navigation">
                         <ul>
                            <li class="fh5co-active"><a href="index.html" alt="Home">Home</a></li>
@@ -80,13 +80,13 @@
                      <div id="backgroundImg">
                         <div class="fh5co-narrow-content">
                            <h2 class="fh5co-heading animate-box" data-animate-effect="fadeInLeft">
-                              <a href="index.html" alt="Homepage"><img src="images/title.jpg" class="img-responsive"></a>
+                              <a href="index.html" alt="Homepage"><img src="images/title.jpg" class="img-responsive" alt="Waterloo battle"></a>
                            </h2>
                            <div>
                               <p class="fh5co animate-box">The aim of Battle of the WaterLOD Project is to create an abstract Linked Open model for describing data related to the battle of Waterloo.</p>
                               <hr class="my-4 fh5co animate-box">
                               <p class="fh5co animate-box"></p>
-                              <img src="images/background.jpg" style="width:100%" class="fh5co-heading animate-box img-responsive">
+                              <img src="images/background.jpg" style="width:100%" class="fh5co-heading animate-box img-responsive" alt="Waterloo battle painting">
                               </br>
                               <a class="btn btn-primary btn-lg" href="about.html" role="button" alt="Learn more">Learn more</a>
                            </div>
