--- a/metadata.html
+++ b/metadata.html
@@ -89,10 +89,10 @@
                         Metadata standards alignement
                      </h2>
                      <div>
-                        <p class="animate-box">The <mark style="background-color: #cc0000; opacity:0.8; color:white;">alignment</mark> below is between <mark style="background-color: #cc0000; opacity:0.8; color:white;">different metadata standard related to people, places, dates and concepts, used by cultural heritage institutions</mark>.</p>
+                        <p class="animate-box">The <mark>alignment</mark> below is between <mark>different metadata standard related to people, places, dates and concepts, used by cultural heritage institutions</mark>.</p>
                      </div>
                      <div>
-                        <img src="images/alignement.png" class="img-responsive animate-box" alt="">
+                        <img src="images/alignement.png" class="img-responsive animate-box" alt="Metadata standard alignement">
                      </div>
                      <div>
                         <p class="animate-box">View also the <a href="alignementmeta.pdf" target="_blank" alt="metadata alignment">metadata standards alignement made for all our items</a>.</p>
